--- a/mongo_load.ipynb
+++ b/mongo_load.ipynb
@@ -32,25 +32,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Drop or clear collection if needed:\n",
     "db.production_db.drop()\n",
-    "# db.brewnum_db.drop()\n",
-    "# db.craft_barrels_db.drop()"
+    "db.brewnum_db.drop()\n",
+    "db.craftbarrels_db.drop()\n",
+    "db.statedata_db.drop()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5f94f4d34f9a48b0b5a6d3d0'),\n",
+       "{'_id': ObjectId('5f95df2a0dee9bf97bb81ce4'),\n",
        " 'Year': '2010',\n",
        " '6,000,001 Barrels and Over': '161000000',\n",
        " '2,000,000 to 6,000,000 Barrels': ' -   ',\n",
@@ -67,7 +68,7 @@
        " 'Total Craft': '34400000'}"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,13 +102,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5f94f1de4f9a48b0b5a6d3ad'),\n",
+       "{'_id': ObjectId('5f95df2e0dee9bf97bb81cee'),\n",
        " 'Year': '2010',\n",
        " '6,000,001 Barrels and Over': '17',\n",
        " '2,000,000 to 6,000,000 Barrels': '0',\n",
@@ -122,7 +123,7 @@
        " '1 to 1,000 Barrels': '1178'}"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,13 +156,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'_id': ObjectId('5f9247200a6856f7a731806e'),\n",
+       "{'_id': ObjectId('5f95df300dee9bf97bb81cf8'),\n",
        " 'Year': '2005',\n",
        " 'Regional': '4059412',\n",
        " 'Micro Brewery': '708014',\n",
@@ -169,7 +170,7 @@
        " 'Contract': '854155'}"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -199,14 +200,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'_id': ObjectId('5f95df330dee9bf97bb81d07'),\n",
+       " 'States': 'Alabama',\n",
+       " '# Breweries': '51',\n",
+       " 'Breweries Per Capita': '1.4',\n",
+       " 'Barrels': '84013'}"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Load \"state_data.csv\" to Mongo\n",
+    "\n",
+    "# Define Mongo collection to store data\n",
+    "collection = db.statedata_db\n",
+    "\n",
+    "csvfile = open(\"state_data.csv\", \"r\")\n",
+    "reader = csv.DictReader(csvfile)\n",
+    "\n",
+    "header = [\"States\", \"# Breweries\", \"Breweries Per Capita\", \"Barrels\"]\n",
+    "\n",
+    "for each in reader:\n",
+    "    row = {}\n",
+    "    for field in header:\n",
+    "        row[field]=each[field]\n",
+    "        \n",
+    "    # print(row)\n",
+    "    db.statedata_db.insert_one(row)\n",
+    "    \n",
+    "# Check insertion\n",
+    "db.statedata_db.find_one()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['craftbarrels_db', 'brewnum_db', 'statedata_db', 'production_db', 'breweries_db']\n"
+      "['production_db', 'statedata_db', 'brewnum_db', 'craftbarrels_db', 'breweries_db']\n"
      ]
     }
    ],
@@ -214,36 +258,9 @@
     "# Confirm collection within USbeer database\n",
     "# Notes:\n",
     "# -- \"production_db\" collection loaded via craft_brewery_scrape notebook\n",
-    "# -- \"statedata_db\" collection was loaded using Mongo import csv function from Mongo Compass (much easier!!)\n",
+    "\n",
     "\n",
     "print(client.USbeer_db.list_collection_names())"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "{'_id': ObjectId('5f92bd435fa317575024073e'),\n",
-       " '': '0',\n",
-       " 'States': 'Alabama',\n",
-       " '# Breweries': 51,\n",
-       " 'Breweries Per Capita': 1.4,\n",
-       " 'Barrels': 84013}"
-      ]
-     },
-     "execution_count": 15,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "# Check other collections inserted elsewhere\n",
-    "db.statedata_db.find_one()\n",
-    "# db.breweries_db.find_one()\n"
    ]
   }
  ],
