--- a/craft_brewery_scrape.ipynb
+++ b/craft_brewery_scrape.ipynb
@@ -36,9 +36,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[<h1>Alabama</h1>, <h1>Alaska</h1>, <h1>Arizona</h1>, <h1>Arkansas</h1>, <h1>California</h1>, <h1>Colorado</h1>, <h1>Connecticut</h1>, <h1>Delaware</h1>, <h1>District of Columbia</h1>, <h1>Florida</h1>, <h1>Georgia</h1>, <h1>Hawaii</h1>, <h1>Idaho</h1>, <h1>Illinois</h1>, <h1>Indiana</h1>, <h1>Iowa</h1>, <h1>Kansas</h1>, <h1>Kentucky</h1>, <h1>Louisiana</h1>, <h1>Maine</h1>, <h1>Maryland</h1>, <h1>Massachusetts</h1>, <h1>Michigan</h1>, <h1>Minnesota</h1>, <h1>Mississippi</h1>, <h1>Missouri</h1>, <h1>Montana</h1>, <h1>Nebraska</h1>, <h1>Nevada</h1>, <h1>New Hampshire</h1>, <h1>New Jersey</h1>, <h1>New Mexico</h1>, <h1>New York</h1>, <h1>North Carolina</h1>, <h1>North Dakota</h1>, <h1>Ohio</h1>, <h1>Oklahoma</h1>, <h1>Oregon</h1>, <h1>Pennsylvania</h1>, <h1>Rhode Island</h1>, <h1>South Carolina</h1>, <h1>South Dakota</h1>, <h1>Tennessee</h1>, <h1>Texas</h1>, <h1>Utah</h1>, <h1>Vermont</h1>, <h1>Virginia</h1>, <h1>Washington</h1>, <h1>West Virginia</h1>, <h1>Wisconsin</h1>, <h1>Wyoming</h1>]\n"
+     ]
+    }
+   ],
    "source": [
     "## Test scrape state headers from craft brewery website\n",
     "\n",
@@ -59,7 +67,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -102,7 +110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -112,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -121,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -130,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -154,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -187,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -211,7 +219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -244,11 +252,7 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-=======
    "execution_count": 1,
->>>>>>> ea11d1638e23bcf0a4f133d5867291ff685e8086
    "metadata": {},
    "outputs": [],
    "source": [
@@ -286,7 +290,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -345,19 +349,6 @@
    "source": [
     "# Check JSON\n",
     "\n",
-    "## Create Mongo database from imported state files\n",
-    "# Import modules\n",
-    "import pymongo\n",
-    "import json\n",
-    "\n",
-    "# Set up default port and client connection; define the database\n",
-    "conn = 'mongodb://localhost:27017'\n",
-    "client = pymongo.MongoClient(conn)\n",
-    "\n",
-    "# Declare the 'USbeer_DB' database in Mongo\n",
-    "db = client.USbeer_db\n",
-    "\n",
-    "\n",
     "locations = db.breweries_db.find()\n",
     "\n",
     "i = 0\n",
@@ -371,53 +362,72 @@
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": 7,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<pymongo.cursor.Cursor object at 0x000002592C08ED68>\n"
-     ]
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "Empty DataFrame\n",
+       "Columns: []\n",
+       "Index: []"
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
-=======
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
->>>>>>> ea11d1638e23bcf0a4f133d5867291ff685e8086
    "source": [
     "# Load CSV files into Mongo\n",
     "\n",
-    "print(locations)\n",
+    "\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-<<<<<<< HEAD
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-=======
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'read_csv' is not defined",
+     "ename": "AttributeError",
+     "evalue": "module 'csv' has no attribute 'read'",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-5-1f3667fad3b4>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m# Load the JSON file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"breweries_merged.csv\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[0mfile_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mread_csv\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m# Insert the loaded data in the Collection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mNameError\u001b[0m: name 'read_csv' is not defined"
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-4-5245a533dffd>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m     18\u001b[0m \u001b[1;31m# Load the JSON file\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     19\u001b[0m \u001b[1;32mwith\u001b[0m \u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m\"breweries_merged.csv\"\u001b[0m\u001b[1;33m)\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mfile\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 20\u001b[1;33m     \u001b[0mfile_data\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mcsv\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mread\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfile\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     21\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     22\u001b[0m \u001b[1;31m# Insert the loaded data in the Collection\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'csv' has no attribute 'read'"
      ]
     }
    ],
->>>>>>> ea11d1638e23bcf0a4f133d5867291ff685e8086
    "source": [
     "# Load all national brewery JSON file into Mongo\n",
     "\n",
@@ -438,7 +448,7 @@
     "\n",
     "# Load the JSON file\n",
     "with open(\"breweries_merged.csv\") as file:\n",
-    "    file_data = read_csv(file)\n",
+    "    file_data = csv.read(file)\n",
     "    \n",
     "# Insert the loaded data in the Collection\n",
     "# If JOSN contains more than one entry\n",
@@ -700,7 +710,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.5"
+   "version": "3.8.3"
   }
  },
  "nbformat": 4,
